# Master-Thesis-pipeExtractor

./: .gitignore  MANIFEST.in  PipeEvoSearch.py  README.adoc  README.md  analyseParameters.py  armatureExtraction.py  config.json  createConfigs.py  custom_types.py  environment.yml  evolution_history.csv  exportSlices.py  export_geojson.py  houghOnSlice.py  korelation.py  lasUtil.py  main.py  pcl_test.py  pipeExtraction.py  pipeExtraction_cli.py  pipeExtraction_hough.py  pipeline.py  pyproject.toml  requirements.txt  test.py  util.py
.devcontainer/: Dockerfile.prod
eval/: componentEval.py  componentMetrics.py  export.py  load_geojson.py  pipeEval.py  pipeMetrics.py  util.py
eval/metrics/: pipeCover.py  pipeTruePositive.py
eval/plots/: componentClassPlot.py  distancePlot.py  pipeClassPlot.py  pipeDistancePlot.py
experiments/: PipeCluster.py  PipeEvoSearch.py  individualValidation.py  pipeExtraction.py  pipeExtraction_hough.py
pipe-extraction-hough/: calcSlice.py  clustering_hough.py  config.json  custom_types.py  export.py  grabPipe.py  mapping.py  merge_segments.py  parallel_slices.py  parallel_snapping.py  pipe-extraction-hough.py  pipe-extraction-hough_parallel.py  samplePointMerge.py  snapToPipe.py  util.py
pipeComponent_extraction/: armatureExtraction.py  export.py  filter.py  pipeComponentExtraction.py
pipe_extraction/: README.adoc  calcSlice.py  export.py  mapping.py  merge_segments.py  parallel_slices.py  parallel_snapping.py  pipe_extraction_hough_parallel.py  samplePointMerge.py  snapToPipe.py
src/pipeExtractor/: __init__.py  config.json  custom_types.py  export_geojson.py  pipeExtraction_cli.py  pipeline.py  util.py
src/pipeExtractor/eval/: componentEval.py  componentMetrics.py  export.py  load_geojson.py  pipeEval.py  pipeMetrics.py  util.py
src/pipeExtractor/pipeComponent_extraction/: export.py  filter.py  pipeComponentExtraction.py
summary/: analyseParameters_clustering.py  analyseParameters_hough.py  sampling_pdal.py  summarize_components.py  summary.py
(+15 files in other folders)
