[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipe-vector-extractor"
version = "0.7.1"
description = "Extraction of pipes and pipe components from classified pointclouds"
readme = { file = "README.adoc", content-type = "text/plain" }
authors = [
    {name = "Benedikt Beigang"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
  "pdal>=2.9.2",
  "numpy>=2.3.3",
  "pandas>=2.3.3",
  "laspy>=2.6.1",
  "scikit-learn>=1.7.2",
  "scikit-image>=0.25.2",
  "matplotlib>=3.10.6",
  "scipy>=1.16.2"
]

[project.urls]
Homepage = "https://github.com/BenediktBeigang/Master-Thesis-pipeExtractor"
Repository = "https://github.com/BenediktBeigang/Master-Thesis-pipeExtractor"

[project.optional-dependencies]
dev = ["black"]

[project.scripts]
pipe-extractor = "pipeExtractor.pipeExtraction_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pipeExtractor = ["config.json"]
